Fix divider component in dark mode

--- a/src/core/divider/divider.module.css
+++ b/src/core/divider/divider.module.css
@@ -1,12 +1,14 @@
 .divider {
   margin: 0.25rem 0;
-  border-top: thin solid rgba(0, 0, 0, 0.15);
+  width: 100% !important;
+  height: 1px !important;
+  background-color: currentColor;
+  opacity: 0.175;
 }
 .divider.vertical {
-  border-left: thin solid rgba(0, 0, 0, 0.15);
-  height: 100% !important;
-  width: 1px;
   margin: 0 0.25rem;
+  width: 1px !important;
+  height: 100% !important;
   flex-shrink: 0;
   align-self: stretch;
 }
